applications/proxy/posthog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posthog-proxy
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 8000
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: posthog-proxy
subsets:
  - addresses:
      - ip: 192.168.178.159
    ports:
      - name: app
        port: 8000
        protocol: TCP
