applications/proxy/posthog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: posthog-proxy
spec:
  rules:
    - host: posthog.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: posthog-proxy
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - posthog.home.juli.sh
      secretName: posthog-proxy-tls
status:
  loadBalancer: {}
